COM-2600 Added Alignment Fix

--- a/stylesheets/modules/b2b-account/account-address-search.less
+++ b/stylesheets/modules/b2b-account/account-address-search.less
@@ -66,10 +66,6 @@ display: inline-block !important;
 }
 .mz-text-margin
 {
-  margin-left: 3%;
-}
-.mz-email-text-margin
-{
-  margin-left: 5%;
+  margin-left: 2.5%;
 }
 
